async-zero-cost-templating/tests/ui/compile_fail/doctype.rs
extern crate alloc;

use async_zero_cost_templating::html;

pub fn main() {
    let _ = html! {
        <!doctype html>
        <html
    };
}
