async-zero-cost-templating/tests/ui/compile_fail/doctype.stderr
error: unexpected end of input, expected one of: `if`, `for`, `while`, identifier, curly braces
 --> tests/ui/compile_fail/doctype.rs:6:13
  |
6 |       let _ = html! {
  |  _____________^
7 | |         <!doctype html>
8 | |         <html
9 | |     };
  | |_____^
  |
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] while parsing attribute
 --> tests/ui/compile_fail/doctype.rs:6:13
  |
6 |       let _ = html! {
  |  _____________^
7 | |         <!doctype html>
8 | |         <html
9 | |     };
  | |_____^
  |
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [note] while parsing element
 --> tests/ui/compile_fail/doctype.rs:8:9
  |
8 |         <html
  |         ^

error: [note] while parsing child
 --> tests/ui/compile_fail/doctype.rs:8:9
  |
8 |         <html
  |         ^

error: [note] while parsing children
 --> tests/ui/compile_fail/doctype.rs:7:9
  |
7 |         <!doctype html>
  |         ^
